--- a/index.html
+++ b/index.html
@@ -3,24 +3,28 @@
 <head>
   <title>Shield To Shield</title>
   <link type="text/css" rel="stylesheet" href="main-style.css"></link>
-  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-  <script type-"text/javascript" src="jquery_customized.js"></script>
-  <script type-"text/javascript" src="world.js"></script>
-  <script type-"text/javascript" src="player.js"></script>
-  <script type-"text/javascript" src="heartbeat.js"></script>
-  <script type-"text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+  <script type="text/javascript" src="jquery_customized.js"></script>
+  <script type="text/javascript" src="world.js"></script>
+  <script type="text/javascript" src="player.js"></script>
+  <script type="text/javascript" src="heartbeat.js"></script>
+  <!--[if lt IE 9]>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/json2/20121008/json2.js"></script>
+  <![endif]-->
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jStorage/0.3.0/jstorage.min.js"></script>
+  <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
   <div id="toolbar">
     <input type="text" id="user" name="user" placeholder="Username" />
     <input type="password" id="pass" name="pass" placeholder="Password" />
     <button id="login" name="login">Login</button>
-    <button id="reset" name="reset">Reset World</button>
+    <button id="reset" name="reset">Reset Game</button>
   </div>
   <div id="player">
-    Rank: <span id="rank">Loser</span><br/>
-    Class: <span id="">Schlub</span><br/>
-    Level: <span id="">None</span></br>
+    Rank: <span id="playerRank">Loser</span><br/>
+    Class: <span id="playerClass">Schlub</span><br/>
+    Level: <span id="playerLevel">None</span></br>
   </div>
   <div id="main">
   </div>
