--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <title>Shield To Shield</title>
   <link type="text/css" rel="stylesheet" href="main-style.css"></link>
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+  <script type="text/javascript" src="jslib/jquery.min.js"></script>
   <script type="text/javascript" src="jquery_customized.js"></script>
   <script type="text/javascript" src="world.js"></script>
   <script type="text/javascript" src="player.js"></script>
   <script type="text/javascript" src="heartbeat.js"></script>
   <!--[if lt IE 9]>
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/json2/20121008/json2.js"></script>
+  <script type="text/javascript" src="jslib/json2.js"></script>
   <![endif]-->
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jStorage/0.3.0/jstorage.min.js"></script>
+  <script type="text/javascript" src="jslib/jstorage.min.js"></script>
   <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
