fixing small details, the rest.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div id="toolbar">
     <input type="text" id="user" name="user" placeholder="Username" />
     <input type="password" id="pass" name="pass" placeholder="Password" />
-    <button id="login" name="login">Login</button>
+    <button id="login" name="login" disabled="disabled">Login</button>
     <button id="reset" name="reset">Reset Game</button>
   </div>
   <div id="player">
