polishing up directory structures for better organization of files.

--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
 <head>
   <title>Shield To Shield</title>
-  <link type="text/css" rel="stylesheet" href="main-style.css"></link>
-  <script type="text/javascript" src="jslib/jquery.min.js"></script>
-  <script type="text/javascript" src="jquery_customized.js"></script>
-  <script type="text/javascript" src="world.js"></script>
-  <script type="text/javascript" src="player.js"></script>
-  <script type="text/javascript" src="heartbeat.js"></script>
+  <link type="text/css" rel="stylesheet" href="style/main-style.css"></link>
+  <script type="text/javascript" src="js/jslib/jquery.min.js"></script>
+  <script type="text/javascript" src="js/jquery_customized.js"></script>
+  <script type="text/javascript" src="js/world.js"></script>
+  <script type="text/javascript" src="js/player.js"></script>
+  <script type="text/javascript" src="js/heartbeat.js"></script>
   <!--[if lt IE 9]>
-  <script type="text/javascript" src="jslib/json2.js"></script>
+  <script type="text/javascript" src="js/jslib/json2.js"></script>
   <![endif]-->
-  <script type="text/javascript" src="jslib/jstorage.min.js"></script>
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="js/jslib/jstorage.min.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
   <div id="toolbar">
