Adding an objective: find the key, get out of the maze.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <input type="password" id="pass" name="pass" placeholder="Password" />
     <button id="login" name="login" disabled="disabled">Login</button>
     <button id="reset" name="reset">Reset Game</button>
+    <button id="light" name="light">Toggle Light</button>
   </div>
   <div id="player">
     Rank: <span id="playerRank">Loser</span><br/>
